Refactor HSMVersion and related classes to remove deprecated versions and leave only logic for version 5